# finetune

./: .buildinfo  .dockercfg.encrypted  .dockerignore  .gitignore  CHANGES.txt  CNAME  Jenkinsfile  MANIFEST.in  README.md  adapter.html  analysis.py  api.html  auxiliary.html  basemodels.html  cachedpredict.html  chunk.html  codeship-services.yml  codeship-steps.yml  config.html  datasetloading.html  docker-compose.yml  genindex.html  index.html  installation.html  mlm_dev.py  objects.inv  py-modindex.html  pytest.ini  quickstart.html  requirements.txt  resource.html  search.html  searchindex.js  sequencelabeler.html  serializing.html  setup.py  test_explain.py  text_utils.py  train.py
.codeship/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md
Data/Sequence/: reuters.json  reuters.xml
_modules/: index.html
_modules/finetune/: base.html  classifier.html  comparison.html  config.html  multi_label_classifier.html  multifield.html  ordinal_regressor.html  regressor.html  sequence_labeling.html
_sources/: adapter.rst.txt  auxiliary.rst.txt  cachedpredict.rst.txt  datasetloading.rst.txt  index.rst.txt  serializing.rst.txt
_static/: documentation_options.js
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  bashrc  build_cpu_docker.sh  build_docker.sh  build_gpu_docker.sh  start_cpu_docker.sh  start_docker.sh  start_gpu_docker.sh
docs/: Makefile  adapter.rst  api.rst  auxiliary.rst  basemodels.rst  chunk.rst  conf.py  config.rst  datasetloading.rst  index.rst  installation.rst  quickstart.rst  resource.rst  sequencelabeler.rst  serializing.rst
doctrees/: environment.pickle  index.doctree
finetune/: __init__.py  activations.py  adafactor.py  analysis.py  association.py  base.py  classifier.py  comparison.py  comparison_regressor.py  config.py  convolutional.py  crf.py  download.py  encoding.py  entailment.py  errors.py  estimator_utils.py  imbalance.py  in_memory_finetune.py  input_pipeline.py  language_model.py  lm_base.py  lm_classifier.py  lm_entailment.py  lm_multipurpose.py  lm_sequence_labeling.py  metrics.py  mlm_utils.py  model.py  mtl.py  multi_choice_qa.py  multi_class_classifier.py  multi_label_classifier.py  multifield.py  multiple_choice.py  multipurpose.py  network_modules.py  opt.py  optimizers.py  ordinal_regressor.py  (+16 more)
finetune/base/: input_pipeline.py  model.py  network_modules.py  positional_embedding.py  saver.py  transformer.py
finetune/base_models/: __init__.py
finetune/custom_ops/: __init__.py  build.sh
finetune/custom_ops/indico_tf_ops/: CMakeLists.txt
finetune/custom_ops/indico_tf_ops/ops/dynamic_conv/: cuda_utils.cu  dynamicconv.cc  dynamicconv.h  dynamicconv_cuda_kernel.cu
finetune/custom_ops/indico_tf_ops/ops/ra/: cuda_op_kernel.cu  ra.cc  ra.h
finetune/custom_ops/indico_tf_ops/python/: dynamic_conv.py  indico_ops.py  ra.py
finetune/datasets/: CoLA_full_run.py  __init__.py  mcdonalds_yelp_sentiment.py  mtl.py  mtl_nli.py  multi_choice_qna.py  multi_qa.py  multinli.py  multinli_grid_search.py  quora_similarity.py  reuters.py  scheduler_test.py  stanford_sentiment_treeback.py  stanford_sentiment_treebank.py  stanford_sentiment_treebank_bert.py  stanford_sentiment_treebank_explain.py  stanford_sentiment_treebank_full_run.py  stanford_sentiment_treebank_gpt2.py  stanford_sentiment_treebank_tcn.py  stanford_sentiment_treebank_with_unsupervised_fit.py  summaries_unsupervised_mlm.py  treebank_association.py
finetune/encoding/: __init__.py  group_target_encoders.py  input_encoder.py  sequence.py  sequence_encoder.py  target_encoders.py
finetune/model/: .gitignore  special_tokens.npy
finetune/nn/: activations.py  add_auxiliary.py  auxiliary.py  compare_ndjson.py  crf.py  graph_conv.py  group_target_blocks.py  nn_utils.py  target_blocks.py
finetune/optimizers/: TSA_schedules.py  __init__.py  adafactor.py  adamax.py  adamw.py  gradient_accumulation.py  learning_rate_schedules.py  recompute_grads.py  tsa_schedules.py  weight_decay.py  zero_grad.py
finetune/scripts/: add_mlm_weights_to_distilbert.py  add_mlm_weights_to_roberta.py  rename_bert_mlm_weights.py  save_file_to_base_model.py
finetune/target_models/: association.py  classifier.py  comparison.py  comparison_regressor.py  denoising_lm.py  deployment_model.py  document_labeling.py  grouping.py  language_model.py  logistic_regression.py  long_doc_classifier.py  masked_language_model.py  mtl.py  multi_label_classifier.py  (+9 more)
glue_submission/: experiments.py
html/: py-modindex.html  searchindex.js
speed_benchmarks/: run.py  synthetic_data.py
tests/: sample_text.ndjson  test_2d_chunking.py  test_association.py  test_aux_mlm.py  test_auxiliary.py  test_backwards_compat.py  test_base_models.py  test_classifier.py  test_comp_regressor.py  test_comparison.py  test_comparison_regressor.py  test_deployment_model.py  test_document.py  test_general_api.py  test_group.py  test_group_metrics.py  test_group_target_encoder.py  test_huggingface.py  test_input_fns.py  test_logisticregression.py  test_masked_language_model.py  test_metrics.py  test_mtl.py  test_multi_classifier.py  test_multiple_choice.py  test_ordinal.py  test_oscar_specific.py  test_parity.py  test_qa.py  test_scheduler.py  test_scheduler_memory_fraction.py  test_self_suprevised.py  test_semi_suprevised.py  test_sequence.py  test_sequence_labeling_encoder.py  test_sort_by_length.py  test_table_base_model.py  test_table_labeler.py  test_textcnn.py  test_utils.py  (+1 more)
train_scripts/: reuters_sequence.py  stanford_treebank.py
(+107 files in other folders)
